fix logo spacing

--- a/wp-content/themes/sixgill/css/custom/all_home.css
+++ b/wp-content/themes/sixgill/css/custom/all_home.css
@@ -88,5 +88,27 @@
 }
 
 .home-logos {
-	text-align: left;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.home-logo-container {
+	height: 120px;
+}
+
+.home-logo-container {
+	width: 16.8%;
+	display: block;
+	position: relative;
+	margin-right: 3%;
+	margin-bottom: 50px;
+	float: left;
+
+}
+
+.home-clients-block {
+	margin-bottom: 36px;
+	width: 720px;
+	margin-left: auto;
+	margin-right: auto;
 }
