--- a/wp-content/themes/sixgill/css/custom/desktop_home.css
+++ b/wp-content/themes/sixgill/css/custom/desktop_home.css
@@ -35,19 +35,15 @@
 		width: 100%;
 	}
 
-	.home-logo-container {
-		width: 20%;
-	}
-
-	.home-clients-block {
-		margin-bottom: 36px;
-	}
-
 	.logo-subheader {
 		margin-bottom: 45px;
 	}
 
 	.home-logos {
-		width: 620px;
+		width: 650px;
+	}
+
+	.home-logos-titles {
+		width: 720px;
 	}
 }
