--- a/wp-content/themes/sixgill/css/custom/mobile_portrait_landscape_home.css
+++ b/wp-content/themes/sixgill/css/custom/mobile_portrait_landscape_home.css
@@ -6,7 +6,11 @@
 	}
 
 	.home-diagram {
-		
+
+	}
+
+	.home-logo-container {
+		width: 50%;
 	}
 
 }
